[package]
name = "l1-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
schnorrkel = { version = "0.11", default-features = false, features = ["alloc"] }
blst = "0.3"
bitvec = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
rand = "0.8"
proptest = "1.4"

[features]
# Use deterministic, RNG-free VRF for tests/dev.
vrf_deterministic = []

default = ["vrf_deterministic"]